fixing comment validation